@@ -13,6 +13,8 @@ Bug fixes:
 
 Other:
 
+* Limit application window startup size
+
 2.6.0
 =====
 
